<resources>
    <string name="app_name">Lab Practicals</string>
    <string name="image_disc">image description</string>
    <string name="Scroll_view_desc">scroll view description</string>

    <!-- main activity drawer item string -->
    <string name="layouts_and_scrollable">layouts and scrollable</string>
    <string name="services_and_storage">services and storage</string>
    <string name="dialog_message">Dialog Message</string>
    <string name="grid_view">grid view</string>
    <string name="list_view">list view</string>
    <string name="todo_list">todo list</string>
    <string name="scroll_view">scroll view</string>
    <string name="recycler_view">recycler view</string>
    <string name="send_email">send email</string>
    <string name="send_sms">send sms</string>
    <string name="shared_preferences">shared preferences</string>
    <string name="firebase_example">firebase example</string>
    <string name="local_notification">local notification</string>
    <string name="web_view">web view</string>

    <!-- drawer header strings -->
    <string name="sidebar_image">sidebar image</string>
    <string name="mobile_application_development">Mobile Application Development</string>
    <string name="lab_practicals">lab practicals</string>

    <!-- drawer status -->
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>

    <!-- practical 1: Dialog message String -->
    <string name="show_dialog_message">show dialog message</string>
    <string name="ok">OK</string>
    <string name="yes_delete">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="the_other_one">Other</string>

    <!-- practical 4: todoList -->
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="here_is_my_todo">here is my todo</string>

    <!-- practical 5: send email -->
    <string name="sender_email">Email</string>
    <string name="cc">Cc:</string>
    <string name="email">Email:</string>
    <string name="sender_email_com">sender@email.com</string>
    <string name="Receiver_email" >receiver@emial.com</string>
    <string name="subject">subject:</string>
    <string name="subject_of_this_email">subject of this email</string>
    <string name="add_or_remove_cc">add or remove CC</string>
    <string name="dear_sir_n">dear sir, \n…</string>
    <string name="draft">draft</string>
    <string name="send">send</string>

    <!-- set email state -->
    <string name="add_email">add_email</string>
    <string name="remove_email">remove_email</string>
    <string name="enter_any_string">enter any string</string>
    <string name="enter_any_signed_number">enter any signed number</string>
    <string name="name">Name:</string>
    <string name="number">Number:</string>
    <string name="load">load</string>
    <string name="clear">reset</string>
    <string name="save">save</string>
    <string name="floatingActionBarButton">floatingActionBarButton</string>
    <string name="enter_notification_title">Enter notification title</string>
    <string name="enterNotificationMessage">Enter notification message</string>
    <string name="enterNotificationDescription">Enter notification description</string>
    <string name="create_notification">create Notification</string>
    <string name="clear_all_notification">Clear All notification</string>
    <string name="show_additional_settings">show additional settings</string>
    <string name="show_descriptive_message">show descriptive message</string>
    <string name="show_timed_notification">show timed notification</string>
    <string name="update_on_change">update on change</string>
    <string name="show_last_notification_only">Show last notification Only</string>
    <string name="show_image_expandable">show image expandable</string>
    <string name="show_additional_image">show additional image</string>
    <string name="add_tap_action">add Tap Action</string>
    <string name="communication">communication</string>
    <string name="continue_process">continue process</string>
    <string name="process_end">process end</string>

    <!-- practical 3: List View String -->
    <string-array name="animalList">
        <item>Deer</item>
        <item>Giraffe</item>
        <item>Peacock</item>
        <item>Fish</item>
        <item>Lion</item>
        <item>Tiger</item>
        <item>Elephant</item>
        <item>Parrot</item>
        <item>Fox</item>
        <item>Squirrel</item>
        <item>Chameleon</item>
        <item>Chimpanzee</item>
    </string-array>


</resources>