<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="@dimen/min_height">

    <EditText
        android:id="@+id/receiverEmail"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/general_padding"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/Receiver_email"
        android:inputType="textEmailAddress"
        android:minHeight="@dimen/min_height"
        android:textColorHint="#757575"
        android:autofillHints="emailAddress"
        android:importantForAutofill="noExcludeDescendants"/>

    <ImageButton
        android:id="@+id/addReceiverEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:backgroundTint="#E8E8E8"
        android:contentDescription="@string/add_or_remove_cc"
        app:srcCompat="@drawable/ic_baseline_add_24"
        app:tint="@color/teal_700"
        tools:ignore="ImageContrastCheck"
        android:tag="@string/add_email"/>
</TableRow>
